--- a/src/Server/Server.fsproj
+++ b/src/Server/Server.fsproj
@@ -1,13 +1,13 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
-    <PropertyGroup>
-        <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp2.2</TargetFramework>
-    </PropertyGroup>
-    <ItemGroup>
-        <None Include="paket.references" />
-        <Compile Include="..\Shared\Shared.fs" />
-        <Compile Include="Server.fs" />
-    </ItemGroup>
-    <Import Project="..\..\.paket\Paket.Restore.targets" />
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>netcoreapp2.2</TargetFramework>
+  </PropertyGroup>
+  <ItemGroup>
+    <None Include="paket.references" />
+    <Compile Include="../Shared/Shared.fs" />
+    <Compile Include="Length.fs" />
+    <Compile Include="Server.fs" />
+  </ItemGroup>
+  <Import Project="..\..\.paket\Paket.Restore.targets" />
 </Project>
